--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+j<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
@@ -1727,7 +1727,7 @@
                               <div class="faq__list__item__answer__text">
                                 <h4>各プラットフォームの規約に則って施策を行うため以下のお時間が平均でかかります。<br />
                                 （Googleキーワード対策：2ヶ月～、Yahoo!キーワード対策：1ヶ月～、検索結果対策：4ヶ月～）<br />
-                                ※あくまで平均値となりますため、多少前後する可能性がある旨ご了承ください。</h4>
+                                ※あくまで平均値となりますため、基本的に１～2ヶ月程度で施策効果があらわれますが、多少前後する可能性がある旨ご了承ください。</h4>
                               </div>
               </div>
             </div>
@@ -2059,27 +2059,27 @@
                   <!-- 注意 -->
                   <div class="column">
                     <div class="essential"><p class="inner-text">必須</p></div>
-                    <label for="company">法人名</label><input id="company" maxlength="40" name="company" size="20" type="text" /><br>
+                    <label for="company">法人名</label><input id="company" maxlength="40" name="company" size="20" type="text" required /><br>
                   </div>
                   <div class="column">
                     <div class="any">
                       <p class="inner-text">任意</p>
                     </div>
-                    <label for="url">公式HP URL</label><input id="url" maxlength="80" name="url" size="20" type="text" />
+                    <label for="url">公式HP URL</label><input id="url" maxlength="80" name="url" size="20" type="text"/>
                   </div>
                   <br>
                   <div class="column">
                     <div class="essential">
                       <p class="inner-text">必須</p>
                     </div>
-                    <label for="last_name">お名前</label><input id="last_name" maxlength="80" name="last_name" size="20" type="text" />
+                    <label for="last_name">お名前</label><input id="last_name" maxlength="80" name="last_name" size="20" type="text" required />
                   </div>
                   <br>
                   <div class="column">
                     <div class="essential">
                       <p class="inner-text">必須</p>
                     </div>
-                    <p class="select">部署名</p><select id="00NQ9000001uKbN" name="00NQ9000001uKbN" title="選択してください">
+                    <p class="select">部署名</p><select id="00NQ9000001uKbN" name="00NQ9000001uKbN" title="選択してください" required>
                       <option value="選択してください"></option>
                       <option value="役員(代表含む)">役員(代表含む)</option>
                       <option value="マーケティング">マーケティング</option>
@@ -2102,7 +2102,7 @@
                     <div class="essential">
                       <p class="inner-text">必須</p>
                     </div>
-                    <p class="select">役職</p><select id="00NQ9000003Yeqv" name="00NQ9000003Yeqv" title="選択してください">
+                    <p class="select">役職</p><select id="00NQ9000003Yeqv" name="00NQ9000003Yeqv" title="選択してください" required>
                     <option value="選択してください"></option>
                     <option value="役員/経営者">役員/経営者</option>
                     <option value="部長">部長</option>
@@ -2117,21 +2117,21 @@
                     <div class="essential">
                       <p class="inner-text">必須</p>
                     </div>
-                    <label for="phone">電話番号</label><input id="phone" maxlength="40" name="phone" size="20" type="text" />
+                    <label for="phone">電話番号</label><input id="phone" maxlength="40" name="phone" size="20" type="text" required/>
                   </div>
                   <br>
                   <div class="column">
                     <div class="essential">
                       <p class="inner-text">必須</p>
                     </div>
-                    <label for="email">メールドレス</label><input id="email" maxlength="80" name="email" size="20" type="text" />
+                    <label for="email">メールドレス</label><input id="email" maxlength="80" name="email" size="20" type="text" required/>
                   </div>
                   <br>
                   <div class="column">
                     <div class="essential">
                       <p class="inner-text">必須</p>
                     </div>
-                    <p class="select">当サービスを知ったきっかけ</p><select id="00NQ9000003Yf0b" name="00NQ9000003Yf0b" title="選択してください">
+                    <p class="select">当サービスを知ったきっかけ</p><select id="00NQ9000003Yf0b" name="00NQ9000003Yf0b" title="選択してください" required>
                       <option value="選択してください"></option>
                       <option value="DM">DM</option>
                       <option value="展示会">展示会</option>
@@ -2176,7 +2176,7 @@
                     <p class="textarea">
                       お問い合わせ内容
                     </p>
-                    <textarea id="00NQ9000003YfQP" name="00NQ9000003YfQP" type="text" wrap="soft"></textarea>
+                    <textarea id="00NQ9000003YfQP" name="00NQ9000003YfQP" type="text" wrap="soft" required></textarea>
                   </div>
                   <br>
                 
@@ -2201,7 +2201,7 @@
                 <a href="./regulation.html">特定商取引法に基づく表記</a>
               </div>
               <div class="footer__container__copyright">
-                <p>© 2024 ○○○○○. All rights reserved.</p>                 
+                <p>Copyright © Brandcloud inc. All Rights Reserved.</p>                 
               </div>
             </div>
           </div>
