--- a/index.html
+++ b/index.html
@@ -708,10 +708,31 @@ j<!DOCTYPE html>
               </div>
             </div>
             <svg
+              class="pc"
               xmlns="http://www.w3.org/2000/svg"
               width="1100"
               height="2"
               viewBox="0 0 1100 2"
+              fill="none"
+            >
+              <path d="M0 1H1100" stroke="#304266" />
+            </svg>
+            <svg
+              class="tab"
+              xmlns="http://www.w3.org/2000/svg"
+              width="704"
+              height="2"
+              viewBox="0 0 704 2"
+              fill="none"
+            >
+              <path d="M0 1H1100" stroke="#304266" />
+            </svg>
+            <svg
+              class="sp"
+              xmlns="http://www.w3.org/2000/svg"
+              width="343"
+              height="2"
+              viewBox="0 0 343 2"
               fill="none"
             >
               <path d="M0 1H1100" stroke="#304266" />
@@ -899,7 +920,7 @@ j<!DOCTYPE html>
           </div>
           <div class="serviceDetail__reasons">
             <div class="serviceDetail__reasons__title">
-              <h3>ブランドクラウドが選ばれる<span>3</span>つの理由</h3>
+              <h3>ブランドクラウドが選ばれる<br class="sp" /><span>3</span>つの理由</h3>
             </div>
             <div class="serviceDetail__reasons__cards">
               <div class="serviceDetail__reasons__cards__card">
@@ -1028,7 +1049,7 @@ j<!DOCTYPE html>
                     </div>
                     <div class="serviceDetail__example__case__result__review__user__comment">
                       <p>
-                        風評被害クラウドのおかげで、会社の評判が劇的に改善しました。<br class="pc" />
+                        風評被害クラウドのおかげで、会社の評判が劇的に改善しました。<br class="pc sp" />
                         迅速に対応していただき感謝しています。
                       </p>
                     </div>
@@ -1547,14 +1568,11 @@ j<!DOCTYPE html>
               </li>
             </ul>
             <div class="plan__container__annotation">
-              <p>※1 風評被害クラウドでお申し込みいただいた検索キーワードについては無料で付帯いたします<br />
-              <br class="sp" />
-              ※2 当社のアナリティストが分析の上、最も施策効果の高い箇所をご提案いたします<br />
-              <br class="sp" />
-              ※3 貴社のニーズを伺った上で、必要な施策を盛り込みお見積りを提示いたします (必ずしも記載の
-              すべてのサービスが含まれるわけではございません。貴社に必要なもののみをご提案いたします)<br />
-              <br class="sp" />
-              ※4 風評被害クラウドのサービスを応用して、逆に良い情報を上位表示させるサービスです</p>
+              <p>※1 風評被害クラウドでお申し込みいただいた検索キーワードについては無料で付帯いたします</p><br />
+              <p>※2 当社のアナリティストが分析の上、最も施策効果の高い箇所をご提案いたします</p><br />
+              <p>※3 貴社のニーズを伺った上で、必要な施策を盛り込みお見積りを提示いたします (必ずしも記載の
+              すべてのサービスが含まれるわけではございません。貴社に必要なもののみをご提案いたします)</p><br />
+              <p>※4 風評被害クラウドのサービスを応用して、逆に良い情報を上位表示させるサービスです</p>
             </div>
           </div>
         </div>
