--- a/index.html
+++ b/index.html
@@ -584,7 +584,8 @@ j<!DOCTYPE html>
               </div>
             </div>
             <div class="serviceIntroduction__head-line__image">
-              <img src="./images/sec6/sec6_model_pc.png" alt="" />
+              <img class="pc tab" src="./images/sec6/sec6_model_pc.png" alt="" />
+              <img class="sp" src="./images/sec6/sec6_model_sp.png" alt="" />
             </div>
             <div class="serviceIntroduction__head-line__bg">
               <svg
@@ -813,16 +814,15 @@ j<!DOCTYPE html>
             <div class="serviceDetail__effect__cards">
               <div class="serviceDetail__effect__cards__card">
                 <div class="serviceDetail__effect__cards__card__container">
-                  <div
-                    class="serviceDetail__effect__cards__card__container__title"
-                  >
-                    <h3>BRanding</h3>
+                  <div class="serviceDetail__effect__cards__card__container__wrapper">
+                    <div class="serviceDetail__effect__cards__card__container__title">
+                      <h3>BRanding</h3>
+                    </div>
+                    <div class="serviceDetail__effect__cards__card__container__japaneseTitle">
+                      <h3>営業部・広報部・広告宣伝部</h3>
+                    </div>
                   </div>
-                  <div
-                    class="serviceDetail__effect__cards__card__container__japaneseTitle"
-                  >
-                    <h3>営業部・広報部・広告宣伝部</h3>
-                  </div>
+                  
                   <div
                     class="serviceDetail__effect__cards__card__container__image"
                   >
@@ -837,24 +837,20 @@ j<!DOCTYPE html>
                     class="serviceDetail__effect__cards__card__container__description"
                   >
                     <p>
-                      悪い評判に触れてサイトに流入すると一般的にCVRは低くなります。
-                      ネガティブなイメージを払拭することで全体CVRの向上に貢献。
-                      結果として広告の投資対効果が改善されます
+                      悪い評判に触れてサイトに流入すると一般的にCVRは低くなります。ネガティブなイメージを払拭することで全体CVRの向上に貢献。結果として広告の投資対効果が改善されます
                     </p>
                   </div>
                 </div>
               </div>
               <div class="serviceDetail__effect__cards__card">
                 <div class="serviceDetail__effect__cards__card__container">
-                  <div
-                    class="serviceDetail__effect__cards__card__container__title"
-                  >
-                    <h3>Investor Relations</h3>
-                  </div>
-                  <div
-                    class="serviceDetail__effect__cards__card__container__japaneseTitle"
-                  >
-                    <h3>広報部・経営企画部</h3>
+                  <div class="serviceDetail__effect__cards__card__container__wrapper">
+                    <div class="serviceDetail__effect__cards__card__container__title">
+                      <h3>Investor Relations</h3>
+                    </div>
+                    <div class="serviceDetail__effect__cards__card__container__japaneseTitle">
+                      <h3>広報部・経営企画部</h3>
+                    </div>
                   </div>
                   <div
                     class="serviceDetail__effect__cards__card__container__image"
@@ -870,25 +866,20 @@ j<!DOCTYPE html>
                     class="serviceDetail__effect__cards__card__container__description"
                   >
                     <p>
-                      会社の悪い評判が広がり、
-                      消費者にマイナスイメージが形成される前に
-                      早期対応をすることで、株価や企業価値の低下を
-                      未然に防ぎます
+                      会社の悪い評判が広がり、消費者にマイナスイメージが形成される前に早期対応をすることで株価や企業価値の低下を未然に防ぎます
                     </p>
                   </div>
                 </div>
               </div>
               <div class="serviceDetail__effect__cards__card">
                 <div class="serviceDetail__effect__cards__card__container">
-                  <div
-                    class="serviceDetail__effect__cards__card__container__title"
-                  >
-                    <h3>Human Resources</h3>
-                  </div>
-                  <div
-                    class="serviceDetail__effect__cards__card__container__japaneseTitle"
-                  >
-                    <h3>人事部</h3>
+                  <div class="serviceDetail__effect__cards__card__container__wrapper">
+                    <div class="serviceDetail__effect__cards__card__container__title">
+                      <h3>Human Resources</h3>
+                    </div>
+                    <div class="serviceDetail__effect__cards__card__container__japaneseTitle">
+                      <h3>人事部</h3>
+                    </div>
                   </div>
                   <div
                     class="serviceDetail__effect__cards__card__container__image"
@@ -907,11 +898,7 @@ j<!DOCTYPE html>
                     class="serviceDetail__effect__cards__card__container__description"
                   >
                     <p>
-                      会社の悪い評判が緩和されることにより
-                      人が集まりやすくなります。
-                      また、悪い評判を目にしたことによる
-                      内定辞退率も低下。結果として、
-                      採用効率を向上させることができます
+                      会社の悪い評判が緩和されることにより人が集まりやすくなります。また、悪い評判を目にしたことによる内定辞退率も低下。結果として、採用効率を向上させることができます
                     </p>
                   </div>
                 </div>
@@ -1177,7 +1164,9 @@ j<!DOCTYPE html>
                   <h4>Step1</h4>
                 </div>
                 <div class="flow__container__steps__step__image">
-                  <img src="./images/sec11/sec11_image-1_pc.jpg" alt="" />
+                  <img class="pc" src="./images/sec11/sec11_image-1_pc.jpg" alt="" />
+                  <img class="tab" src="./images/sec11/sec11_image-1_tb.jpg" alt="" />
+                  <img class="sp" src="./images/sec11/sec11_image-1_sp.jpg" alt="" />
                 </div>
                 <div class="flow__container__steps__step__title">
                   <h3>現状調査&対策プラン設計</h3>
@@ -1196,7 +1185,9 @@ j<!DOCTYPE html>
                   <h4>Step2</h4>
                 </div>
                 <div class="flow__container__steps__step__image">
-                  <img src="./images/sec11/sec11_image-2_pc.jpg" alt="" />
+                  <img class="pc" src="./images/sec11/sec11_image-2_pc.jpg" alt="" />
+                  <img class="tab" src="./images/sec11/sec11_image-2_tb.jpg" alt="" />
+                  <img class="sp" src="./images/sec11/sec11_image-2_sp.jpg" alt="" />
                 </div>
                 <div class="flow__container__steps__step__title">
                   <h3>お打ち合わせ</h3>
@@ -1215,7 +1206,9 @@ j<!DOCTYPE html>
                   <h4>Step3</h4>
                 </div>
                 <div class="flow__container__steps__step__image">
-                  <img src="./images/sec11/sec11_image-3_pc.jpg" alt="" />
+                  <img class="pc" src="./images/sec11/sec11_image-3_pc.jpg" alt="" />
+                  <img class="tab" src="./images/sec11/sec11_image-3_tb.jpg" alt="" />
+                  <img class="sp" src="./images/sec11/sec11_image-3_sp.jpg" alt="" />
                 </div>
                 <div class="flow__container__steps__step__title">
                   <h3>対策プラン 契約開始日確定</h3>
@@ -1232,7 +1225,9 @@ j<!DOCTYPE html>
                   <h4>Step4</h4>
                 </div>
                 <div class="flow__container__steps__step__image">
-                  <img src="./images/sec11/sec11_image-4_pc.jpg" alt="" />
+                  <img class="pc" src="./images/sec11/sec11_image-4_pc.jpg" alt="" />
+                  <img class="tab" src="./images/sec11/sec11_image-4_tb.jpg" alt="" />
+                  <img class="sp" src="./images/sec11/sec11_image-4_sp.jpg" alt="" />
                 </div>
                 <div class="flow__container__steps__step__title">
                   <h3>ご契約手続き</h3>
@@ -1249,7 +1244,9 @@ j<!DOCTYPE html>
                   <h4>Step5</h4>
                 </div>
                 <div class="flow__container__steps__step__image">
-                  <img src="./images/sec11/sec11_image-5_pc.jpg" alt="" />
+                  <img class="pc" src="./images/sec11/sec11_image-5_pc.jpg" alt="" />
+                  <img class="tab" src="./images/sec11/sec11_image-5_tb.jpg" alt="" />
+                  <img class="sp" src="./images/sec11/sec11_image-5_sp.jpg" alt="" />
                 </div>
                 <div class="flow__container__steps__step__title">
                   <h3>施策のスタート</h3>
@@ -1278,9 +1275,9 @@ j<!DOCTYPE html>
               <div class="plan__container__description__upper">
                 <h3>
                   最低価格月額<span> 5 </span>
-                  万円からお客様のご要望<br class="tab sp" />に応じたプランのご提案が可能です
+                  万円からお客様のご要望<br class="sp" />に応じた<br class="tab" />プランのご提案が可能です
                 </h3>
-                <h3 class="sp">代表的な３つのプランをご紹介いたします</h3>
+                <h3 class="sp tab">代表的な３つのプランをご紹介いたします</h3>
               </div>
               <div class="pc plan__container__description__lower">
                 <h3>代表的な<span>3</span>つのプランをご紹介いたします</h3>
