--- a/index.html
+++ b/index.html
@@ -2069,44 +2069,44 @@ j<!DOCTYPE html>
                   <input type="hidden" name="debugEmail" value="marina.kurosu@brandcloud.co.jp">
 
                   <div class="column">
-                    <div class="sp upper">
+                    <div class="upper">
                       <div class="essential"><p class="inner-text">必須</p></div>
                     <label for="company">法人名</label>
                     </div>
-                    <div class="sp lower">
+                    <div class="lower">
                       <input id="company" maxlength="40" name="company" size="20" type="text" required /><br>
                     </div>
                   </div>
                   <div class="column">
-                    <div class="sp upper">
+                    <div class="upper">
                       <div class="essential">
                         <p class="inner-text">必須</p>
                       </div>
                       <label for="url">公式HP URL</label>
                     </div>  
-                    <div class="sp lower">
+                    <div class="lower">
                       <input id="url" maxlength="80" name="url" size="20" type="text" />
                     </div>
                   </div>
                   <div class="column">
-                    <div class="sp upper">
+                    <div class="upper">
                       <div class="essential">
                         <p class="inner-text">必須</p>
                       </div>
                       <label for="last_name">お名前</label>
                     </div>  
-                    <div class="sp lower">
+                    <div class="lower">
                       <input id="last_name" maxlength="80" name="last_name" size="20" type="text" required />
                     </div>
                   </div>
                   <div class="column">
-                    <div class="sp upper">
+                    <div class="upper">
                       <div class="essential">
                         <p class="inner-text">必須</p>
                       </div>
                       <p class="select">部署名</p>
                     </div>  
-                    <div class="sp lower">
+                    <div class="lower">
                     <select id="00NQ9000001uKbN" name="00NQ9000001uKbN" title="選択してください" required>
                       <option value="選択してください"></option>
                       <option value="役員(代表含む)">役員(代表含む)</option>
@@ -2127,13 +2127,13 @@ j<!DOCTYPE html>
                     </div>
                   </div>
                   <div class="column">
-                    <div class="sp upper">
+                    <div class="upper">
                       <div class="essential">
                         <p class="inner-text">必須</p>
                       </div>
                       <p class="select">役職</p>
                     </div>  
-                    <div class="sp lower">
+                    <div class="lower">
                     <select id="00NQ9000003Yeqv" name="00NQ9000003Yeqv" title="選択してください" required>
                       <option value="選択してください"></option>
                       <option value="役員/経営者">役員/経営者</option>
@@ -2146,24 +2146,24 @@ j<!DOCTYPE html>
                     </div>
                   </div>
                   <div class="column">
-                    <div class="sp upper">
+                    <div class="upper">
                       <div class="essential">
                         <p class="inner-text">必須</p>
                       </div>
                       <label for="phone">電話番号</label>
                     </div>  
-                    <div class="sp lower">
+                    <div class="lower">
                     <input id="phone" maxlength="40" name="phone" size="20" type="text" required />
                     </div>
                   </div>
                   <div class="column">
-                    <div class="sp upper">
+                    <div class="upper">
                       <div class="essential">
                         <p class="inner-text">必須</p>
                       </div>
                       <p class="select">当サービスを知ったきっかけ</p>
                     </div>  
-                    <div class="sp lower">
+                    <div class="lower">
                     <select id="00NQ9000003Yf0b" name="00NQ9000003Yf0b" title="選択してください" required>
                       <option value="選択してください"></option>
                       <option value="DM">DM</option>
@@ -2183,45 +2183,44 @@ j<!DOCTYPE html>
                     </div>
                   </div>
                   <div class="column">
-                    <div class="sp upper">
-                      <div class="essential">
-                        <p class="inner-text">必須</p>
+                    <div class="upper">
+                      <div class="space">
+                        <p class="inner-text">　　</p>
                       </div>
                       <p class="textarea">
                         ［当サービスを知ったきっかけで「ご紹介」を選択した方］ご紹介者をご記入ください
                       </p>
                     </div>  
-                    <div class="sp lower">
+                    <div class="lower">
                       <textarea id="00NQ9000003Yf2D" name="00NQ9000003Yf2D" type="text" wrap="soft"></textarea>
                     </div>
                   </div>
                   <div class="column">
-                    <div class="space">
-                      <p class="inner-text">　　</p>
+                    <div class="upper">
+                      <div class="space">
+                        <p class="inner-text">　　</p>
+                      </div>
+                      <p class="textarea">
+                        ［当サービスを知ったきっかけで「その他」を選択した方］その他のきっかけをご記入ください
+                      </p>
+                    </div>  
+                    <div class="lower">
+                      <textarea id="00NQ9000003Yf2D" name="00NQ9000003Yf2D" type="text" wrap="soft"></textarea>
                     </div>
-
-
                   </div>
-                  <br>
                   <div class="column">
-                    <div class="space">
-                      <p class="inner-text">　　</p>
+                    <div class="upper">
+                      <div class="essential">
+                        <p class="inner-text">必須</p>
+                      </div>
+                      <p class="textarea">
+                        お問い合わせ内容
+                      </p>
                     </div>
-                    <p class="textarea">
-                      ［当サービスを知ったきっかけで「その他」を選択した方］その他のきっかけをご記入ください
-                    </p>
-                    <textarea id="00NQ9000003Yefe" name="00NQ9000003Yefe" type="text"
-                      wrap="soft"></textarea>
+                    <div class="lower">  
+                      <textarea id="00NQ9000003Yf2D" name="00NQ9000003Yf2D" type="text" wrap="soft"></textarea>
+                    </div>
                   </div>
-                  <br>
-                  <div class="column">
-                    <div class="essential"><p class="inner-text">必須</p></div>
-                    <p class="textarea">
-                      お問い合わせ内容
-                    </p>
-                    <textarea id="00NQ9000003YfQP" name="00NQ9000003YfQP" type="text" wrap="soft" required></textarea>
-                  </div>
-                  <br>
                 
                   <input class="submit-button" type="submit" name="submit" value="送信する">
                 </form>
