--- a/index.html
+++ b/index.html
@@ -2057,8 +2057,8 @@ j<!DOCTYPE html>
             <div class="contact__container__title">
               <h2>お問い合わせ</h2>
               <div class="contact__container__title__texts">
-                <p>ネットの悪評や風評被害にお悩みの方はお気軽にご相談ください<br />
-                <span>リスク調査レポートを無料でプレゼントいたします</span></p>
+                <p>ネットの悪評や風評被害にお悩みの方は<br class="sp" />お気軽にご相談ください<br />
+                <span>リスク調査レポートを無料でプレゼント<br class="sp" />いたします</span></p>
               </div>
               <div class="contact__container__form">
                 <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00D5h0000019Ruf"
@@ -2079,8 +2079,8 @@ j<!DOCTYPE html>
                   </div>
                   <div class="column">
                     <div class="upper">
-                      <div class="essential">
-                        <p class="inner-text">必須</p>
+                      <div class="any">
+                        <p class="inner-text">任意</p>
                       </div>
                       <label for="url">公式HP URL</label>
                     </div>  
@@ -2184,7 +2184,7 @@ j<!DOCTYPE html>
                   </div>
                   <div class="column">
                     <div class="upper">
-                      <div class="space">
+                      <div class="pc tab space">
                         <p class="inner-text">　　</p>
                       </div>
                       <p class="textarea">
@@ -2197,7 +2197,7 @@ j<!DOCTYPE html>
                   </div>
                   <div class="column">
                     <div class="upper">
-                      <div class="space">
+                      <div class="pc tab space">
                         <p class="inner-text">　　</p>
                       </div>
                       <p class="textarea">
