--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-j<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
@@ -2244,7 +2244,7 @@ j<!DOCTYPE html>
                 <a href="./regulation.html">特定商取引法に基づく表記</a>
               </div>
               <div class="footer__container__copyright">
-                <p>Copyright © Brandcloud inc. All Rights Reserved.</p>                 
+                <p>Copyright © Brandcloud inc. All Rights Reserved.</p>              
               </div>
             </div>
           </div>
