--- a/policy.html
+++ b/policy.html
@@ -3,8 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+    <meta name="robots" content="noindex , nofollow" />
     <title>プライバシーポリシー</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./tablet.css" />
+    <link rel="stylesheet" href="./phone.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/cloud fav/260x260px.svg"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/cloud fav/512x512px.svg"
+    />
   </head>
 
   <body>
@@ -60,7 +76,7 @@
               <a href="regulation.html">特定商取引法に基づく表記</a>
             </div>
             <div class="footer__container__copyright">
-              <p>© 2024 ○○○○○. All rights reserved.</p>
+              <p>Copyright © Brandcloud inc. All Rights Reserved.</p>
             </div>
           </div>
         </div>
