--- a/regulation.html
+++ b/regulation.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
     <meta name="robots" content="noindex , nofollow" />
     <title>特定商取引法に基づく表記</title>
+    <link rel="stylesheet" href="./normalize.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./tablet.css" />
     <link rel="stylesheet" href="./phone.css" />
