--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/cloud fav/512x512px.svg">
   </head>
   <body>
-    <!-- クラス名、id名、要素の使い方等微妙なものがありましたらご指摘いただきたいです -->
     <main>
       <section id="top">
         <div class="top">
@@ -58,7 +57,7 @@
             <div class="company-overview__container__title">
               <h2>
                 ブランドクラウドは<br />
-                東証プライム上場の<br class="sp" />株式会社ベクトルのグループ会社です
+                東証プライム上場のベクトル<br class="sp" />のグループ会社です
               </h2>
             </div>
             <div class="company-overview__container__stats">
@@ -1981,10 +1980,15 @@
             <div class="free-service__container__head">
               <div class="free-service__container__head__text-area">
                 <div class="free-service__container__head__text-area">
-                  <div class="free-service__container__head__text-area__title">
+                  <div class="pc tab free-service__container__head__text-area__title">
                     <h2>お問い合わせいただいた方に<br />
                     <span class="free-service__container__head__text-area__title__highlight">レピュテーションリスク診断</span>を<br />
                     <span class="free-service__container__head__text-area__title__highlight">無料</span>で行います！</h2>
+                  </div>
+                  <div class="sp free-service__container__head__text-area__title">
+                    <h2>お問い合わせいただいた方に<br />
+                    <span class="free-service__container__head__text-area__title__highlight">
+                      レピュテーションリスク診断を<br />無料</span>で行います！</h2>
                   </div>
                   <div class="free-service__container__head__text-area__description">
                       <p>会社名やサービス名を検索エンジンやSNSで検索した際に<br />
