--- a/index.html
+++ b/index.html
@@ -2097,6 +2097,17 @@
                     <div class="essential">
                       <p class="inner-text">必須</p>
                     </div>
+                    <label for="email">メールアドレス</label>
+                  </div>
+                  <div class="lower">
+                    <input id="email" maxlength="80" name="email" size="20" type="text" />
+                  </div>
+                </div>
+                <div class="column">
+                  <div class="upper">
+                    <div class="essential">
+                      <p class="inner-text">必須</p>
+                    </div>
                     <p class="select">当サービスを知ったきっかけ</p>
                   </div>
                   <div class="lower">
